# netbox-live-log

./: .gitignore  README.md  pyproject.toml
example_scripts/: live_demo.py
netbox_live_log/: __init__.py  mixins.py  redis_client.py  template_content.py  urls.py  views.py
netbox_live_log/templates/netbox_live_log/: live_log_injection.html
